--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
-  "name": "first4move",
-  "version": "1.0.0",
-  "private": true,
-  "description": "first4move",
-  "author": "Tomasz Posiadala",
-  "keywords": [
-    "gatsby"
-  ],
-  "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
-    "build": "gatsby build",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean"
-  },
-  "dependencies": {
-    "gatsby": "^4.23.0",
-    "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-image": "^2.23.0",
-    "gatsby-plugin-react-svg": "^3.1.0",
-    "gatsby-plugin-sharp": "^4.23.0",
-    "gatsby-plugin-sitemap": "^5.23.0",
-    "gatsby-source-filesystem": "^4.23.0",
-    "gatsby-source-sanity": "^7.4.2",
-    "gatsby-transformer-sharp": "^4.23.0",
-    "hamburger-react": "^2.5.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0"
-  },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.7",
-    "autoprefixer": "^10.4.11",
-    "gatsby-plugin-postcss": "^5.23.0",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
-  }
+	"name": "first4move",
+	"version": "1.0.0",
+	"private": true,
+	"description": "first4move",
+	"author": "Tomasz Posiadala",
+	"keywords": [
+		"gatsby"
+	],
+	"scripts": {
+		"dev": "gatsby develop",
+		"start": "gatsby develop",
+		"build": "gatsby build",
+		"serve": "gatsby serve",
+		"clean": "gatsby clean"
+	},
+	"dependencies": {
+		"gatsby": "^4.23.0",
+		"gatsby-plugin-google-fonts": "^1.0.1",
+		"gatsby-plugin-image": "^2.23.0",
+		"gatsby-plugin-react-svg": "^3.1.0",
+		"gatsby-plugin-sharp": "^4.23.0",
+		"gatsby-plugin-sitemap": "^5.23.0",
+		"gatsby-source-filesystem": "^4.23.0",
+		"gatsby-source-sanity": "^7.4.2",
+		"gatsby-transformer-sharp": "^4.23.0",
+		"hamburger-react": "^2.5.0",
+		"react": "^18.1.0",
+		"react-dom": "^18.1.0",
+		"swiper": "^8.4.3"
+	},
+	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.7",
+		"autoprefixer": "^10.4.11",
+		"gatsby-plugin-postcss": "^5.23.0",
+		"postcss": "^8.4.16",
+		"tailwindcss": "^3.1.8"
+	}
 }
