--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	},
 	"dependencies": {
 		"gatsby": "^4.23.0",
+		"gatsby-plugin-anchor-links": "^1.2.1",
 		"gatsby-plugin-google-fonts": "^1.0.1",
 		"gatsby-plugin-image": "^2.23.0",
 		"gatsby-plugin-react-svg": "^3.1.0",
