--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"gatsby-plugin-google-fonts": "^1.0.1",
 		"gatsby-plugin-image": "^2.23.0",
 		"gatsby-plugin-react-svg": "^3.1.0",
+		"gatsby-plugin-robots-txt": "^1.7.1",
 		"gatsby-plugin-sanity-image": "^0.13.0",
 		"gatsby-plugin-sharp": "^4.23.0",
 		"gatsby-plugin-sitemap": "^5.24.0",
