some websiote chanegs and adding webhook deploy plugin to sanity studio

--- a/Sanity/package.json
+++ b/Sanity/package.json
@@ -16,6 +16,7 @@
 	"dependencies": {
 		"@sanity/base": "^2.34.0",
 		"@sanity/core": "^2.34.0",
+		"@sanity/dashboard": "^2.35.0",
 		"@sanity/default-layout": "^2.34.0",
 		"@sanity/default-login": "^2.34.0",
 		"@sanity/desk-tool": "^2.34.1",
@@ -25,6 +26,8 @@
 		"prop-types": "^15.7",
 		"react": "^17.0",
 		"react-dom": "^17.0",
+		"sanity-plugin-dashboard-widget-netlify": "^1.3.1",
+		"sanity-plugin-webhook-deploy": "^1.0.0",
 		"styled-components": "^5.2.0"
 	},
 	"devDependencies": {},
