--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "first4move",
+	"name": "123renovatoredinburgh",
 	"version": "1.0.0",
 	"private": true,
-	"description": "first4move",
+	"description": "Website developed for local renovation business.",
 	"author": "Tomasz Posiadala",
 	"keywords": [
 		"gatsby"
